[package]
name = "compare"
version = "0.1.0"
edition = "2024"
# This crate is purely for benchmarking — it is not published.
publish = false

[dev-dependencies]
degas-cuda = { path = "../degas-cuda" }
# cudarc is used directly here so we can write the raw equivalent of each
# degas-cuda call and measure both sides under identical conditions.
cudarc = { version = "0.19", features = ["nvrtc"] }
criterion = { version = "0.5", features = ["html_reports"] }

[features]
default = []
cuda-version-from-build-system = [
    "degas-cuda/cuda-version-from-build-system",
    "cudarc/cuda-version-from-build-system",
]
cuda-13020 = ["degas-cuda/cuda-13020", "cudarc/cuda-13020"]
cuda-13010 = ["degas-cuda/cuda-13010", "cudarc/cuda-13010"]
cuda-13000 = ["degas-cuda/cuda-13000", "cudarc/cuda-13000"]
cuda-12090 = ["degas-cuda/cuda-12090", "cudarc/cuda-12090"]
cuda-12080 = ["degas-cuda/cuda-12080", "cudarc/cuda-12080"]
cuda-12060 = ["degas-cuda/cuda-12060", "cudarc/cuda-12060"]
cuda-12050 = ["degas-cuda/cuda-12050", "cudarc/cuda-12050"]
cuda-12040 = ["degas-cuda/cuda-12040", "cudarc/cuda-12040"]
cuda-12030 = ["degas-cuda/cuda-12030", "cudarc/cuda-12030"]
cuda-12020 = ["degas-cuda/cuda-12020", "cudarc/cuda-12020"]
cuda-12010 = ["degas-cuda/cuda-12010", "cudarc/cuda-12010"]
cuda-12000 = ["degas-cuda/cuda-12000", "cudarc/cuda-12000"]
cuda-11080 = ["degas-cuda/cuda-11080", "cudarc/cuda-11080"]
cuda-11070 = ["degas-cuda/cuda-11070", "cudarc/cuda-11070"]
cuda-11060 = ["degas-cuda/cuda-11060", "cudarc/cuda-11060"]
cuda-11050 = ["degas-cuda/cuda-11050", "cudarc/cuda-11050"]
cuda-11040 = ["degas-cuda/cuda-11040", "cudarc/cuda-11040"]

[[bench]]
name = "ffi_vs_wrapper"
harness = false
