[package]
name = "degas-cuda"
version = "0.1.0"
edition = "2024"
description = "A lightweight library for running CUDA kernels from Rust"
license = "MIT"
repository = "https://github.com/rasmsnall/degas-CUDA"
keywords = ["cuda", "gpu", "compute", "parallel", "acceleration"]
categories = ["science", "hardware-support"]
rust-version = "1.88"

[dependencies]
# "nvrtc" is required for the Ptx type used to load PTX modules.
# No cuda-XXXXX feature is set here — users pass their own via the features
# list below, which forward to cudarc. See the README for how to pick the
# right version (hint: run `nvidia-smi` and look at "CUDA Version").
cudarc = { version = "0.19", features = ["nvrtc"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt"], optional = true }

[features]
default = []

# Pass one of these through to cudarc to select your CUDA version.
# Must match the version shown in `nvidia-smi`, NOT the toolkit version.
# Using a version newer than your driver will panic at startup.
cuda-version-from-build-system = ["cudarc/cuda-version-from-build-system"]
cuda-13020 = ["cudarc/cuda-13020"]
cuda-13010 = ["cudarc/cuda-13010"]
cuda-13000 = ["cudarc/cuda-13000"]
cuda-12090 = ["cudarc/cuda-12090"]
cuda-12080 = ["cudarc/cuda-12080"]
cuda-12060 = ["cudarc/cuda-12060"]
cuda-12050 = ["cudarc/cuda-12050"]
cuda-12040 = ["cudarc/cuda-12040"]
cuda-12030 = ["cudarc/cuda-12030"]
cuda-12020 = ["cudarc/cuda-12020"]
cuda-12010 = ["cudarc/cuda-12010"]
cuda-12000 = ["cudarc/cuda-12000"]
cuda-11080 = ["cudarc/cuda-11080"]
cuda-11070 = ["cudarc/cuda-11070"]
cuda-11060 = ["cudarc/cuda-11060"]
cuda-11050 = ["cudarc/cuda-11050"]
cuda-11040 = ["cudarc/cuda-11040"]

# Enable degas_cuda::compile_ptx for compiling CUDA C strings at runtime.
# Requires the NVRTC shared library (libnvrtc / nvrtc64.dll) at runtime.
nvrtc-compile = []

# Enable AsyncGpuContext for use with tokio. Requires tokio runtime at runtime.
async = ["dep:tokio"]

[[example]]
name = "device_info"

[[example]]
name = "vector_add"
